# resxr-python-pipeline

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  environment-dev.yml  environment.yml  pyproject.toml
.github/workflows/: tests.yaml
DATA/test_data/: 2026.03.12_15-47_events.csv  2026.03.12_15-47_session_metadata.json
config/: pipeline_config.yaml
output/: .bidsignore  README  dataset_description.json  participants.json  participants.tsv
output/derivatives/resxr/: README  dataset_description.json
output/sub-01/ses-01/: 2026.03.12_15-47_report.html  2026.06.08_16-57_report.html  2026.06.10_18-22_report.html  sub-01_ses-01_scans.tsv  sub-01_ses-01_task-VRtracking_events.json  sub-01_ses-01_task-VRtracking_events.tsv
output/sub-02/ses-01/: 2026.06.04_09-55_report.html  2026.06.08_16-58_report.html  2026.06.10_18-32_report.html  sub-02_ses-01_scans.tsv  sub-02_ses-01_task-VRtracking_events.json  sub-02_ses-01_task-VRtracking_events.tsv
output/sub-03/ses-01/: 2026.06.08_17-05_report.html  2026.06.10_18-42_report.html  sub-03_ses-01_scans.tsv  sub-03_ses-01_task-VRtracking_events.json  sub-03_ses-01_task-VRtracking_events.tsv
src/resxr/: __init__.py  cli.py  pipeline.py
src/resxr/bids/: __init__.py  channels.py  events_merge.py  layout.py  metadata.py  naming.py
src/resxr/core/: __init__.py  config.py  constants.py  exceptions.py  logger.py  session.py
src/resxr/io/: __init__.py  column_maps.py  readers.py  splitter.py  writers.py
src/resxr/preprocessing/: __init__.py  stream_preprocessing.py
tests/: conftest.py  test_cli.py  test_schema_guard.py
tests/bids/: test_channels.py  test_events_merge.py  test_layout.py  test_metadata.py  test_naming.py
tests/core/: test_config.py  test_constants.py  test_quality_flag.py  test_session.py
tests/integration/: test_pipeline_flow.py
tests/io/: test_column_maps.py  test_readers.py  test_splitter.py  test_writers.py
tests/preprocessing/: test_stream_preprocessing.py
tests/utils/: test_utils.py
tests/validation/: test_registry.py
tests/visualization/: test_report.py
(+144 files in other folders)
